Fix click-through issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,12 @@ main .viewer {
     left: 0;
     height: 100%;
     width: min(18rem, 80dvw);
+    
+    pointer-events: none;
+}
+
+.dresser * {
+    pointer-events: auto;
 }
 
 
